--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,6 +17,8 @@
 <body>
   <app-root></app-root>
 
+  <script async defer
+    src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v7.0&appId=1098638313668438&autoLogAppEvents=1"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
